# notes

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  MCP_IMPLEMENTATION_SUMMARY.md  Makefile  README.md  lefthook.yml  mise.toml
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 20260310_01_initial_schema.py  20260320_01_add_workspace_sync_metadata.py  20260320_02_add_applied_mutations.py  20260409_01_remove_mcp_tokens.py  20260409_02_add_user_api_keys.py  797061e639d9_add_ai_edit_jobs.py
backend/app/: config.py  cost_report.py  database.py  db_commit.py  http_errors.py  lambda_handler.py  logging_utils.py  main.py  observability.py  worker_lambda_handler.py
backend/app/auth/: __init__.py  api_key_service.py  app_user_service.py  cognito.py  dependencies.py
backend/app/bootstrap/: __init__.py  database_bootstrap.py
backend/app/core/: persistence.py  prompts.py
backend/app/features/admin/: __init__.py  dependencies.py  router.py  schemas.py  service.py  use_cases.py
backend/app/features/assistant/: __init__.py  ai_service.py  cache_service.py  context.py  edit_jobs.py  (+11 more)
backend/app/models/: __init__.py  admin.py  ai_edit_job.py  app_user.py  applied_mutation.py  enums.py  folder.py  mcp.py  mcp_token.py  note.py  note_share.py  token_usage.py  user_api_key.py  user_settings.py
backend/app/repositories/: __init__.py  folder_repository.py  note_repository.py
backend/app/routers/: __init__.py  admin.py  ai.py  db_exceptions.py  folders.py  images.py  mcp.py  notes.py  settings.py  share.py
backend/app/services/: __init__.py  admin_service.py  ai_application_service.py  app_user_service.py  bedrock.py  cache.py  context.py  edit_jobs.py  folder_service.py  mcp_service.py  note_service.py  settings_service.py  share_service.py  token_usage.py
backend/app/shared/: __init__.py  errors.py
backend/scripts/: cleanup_test_tokens.py
backend/tests/: conftest.py  test_admin.py  test_ai.py  test_ai_application_service.py  test_api_keys.py  test_app_user_service.py  test_auth.py  test_auth_dependencies.py  test_bedrock.py  test_database_bootstrap.py  test_database_connection.py  test_db_exceptions.py  test_edit_jobs.py  test_export.py  test_folders.py  test_images.py  test_logging.py  test_mcp.py  test_migration.py  test_models.py  test_notes.py  test_repositories.py  test_settings.py  test_share.py  test_token_usage.py  test_workspace_changes.py  test_workspace_snapshot.py
backend/tests/integration/: conftest.py  test_ai_endpoints.py  test_api_endpoints.py  test_authorization.py  test_mcp_endpoints.py  test_share_endpoints.py
backend/tests/unit/: test_cache_service.py  test_logging_utils.py  test_observability.py  test_token_limit.py
lambda/auth_manager/: Dockerfile  main.py  pyproject.toml  requirements.txt
lambda/auth_manager/tests/: test_main_unit.py
lambda/mcp_server/: .dockerignore  Dockerfile  app.py  lambda_handler.py  pyproject.toml  requirements.txt
lambda/mcp_server/tests/: __init__.py  conftest.py  test_app_unit.py  test_mcp_integration.py
(+298 files in other folders)
