[project]
name = "notes-backend"
version = "0.1.0"
description = "Mac Notes Clone Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlmodel>=0.0.22",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",
    "boto3>=1.35.0",
    "psycopg2-binary>=2.9.0",
    "mangum>=0.17.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "sentry-sdk>=2.54.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "S", "UP"]
ignore = ["E501"]  # Line too long - existing code has many long lines

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert はテストコードでは正当
    "S105",  # テスト用ハードコード文字列
    "S106",  # テスト用ハードコードパスワード (test_database_connection.py)
    "S107",  # テスト用ハードコードパスワード
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
