[project]
name = "notes-mcp-auth-manager"
version = "0.1.0"
description = "MCP Auth Manager Lambda for Notes App"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "pyjwt>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "boto3>=1.35.0",
    "mangum>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
