[project]
name = "notes-mcp-server"
version = "0.1.0"
description = "MCP Server Lambda for Notes App"
requires-python = ">=3.12"
dependencies = [
    "mcp>=0.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.0",
    "boto3>=1.35.0",
    "mangum>=0.17.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
